fix các lôi như: giao diện fe, upload ảnh, chỉnh lại thanh dieu hương,...
